fixed tool tip overflow

--- a/assets/css/framework.css
+++ b/assets/css/framework.css
@@ -594,7 +594,7 @@ object{
 		width: 100%;
 		z-index: 100;
 	}
-	.header-overlay-no-push .header-overlay:not(.is_stuck){
+	.header-site.header-overlay:not(.is_stuck){
 		background: transparent;
 	}
 
